--- a/about/index.html
+++ b/about/index.html
@@ -90,21 +90,22 @@ window.onload = wrap_img;
     <p><img src="/MLforIR4/images/Profile_Photo.png" alt="Profile Photo" title="A lovely day in Jeju island" /></p>
 <h3 id="jaewon-son">Jaewon Son</h3>
 <blockquote>
-  <p>Living in accordance with Kaizen (improvements).
-I am a thermal and fluid management engineer working in the automotive industry. Born and bred in South Korea, but currently living in Japan.
-My key skills and interests are:</p>
-  <ul>
-    <li>Computational Fluid Dynamics (CFD)</li>
-    <li>Turbulent flow</li>
-    <li>Battery thermal management</li>
-    <li>Mechanical design</li>
-    <li>Applying Machine Learning in manufacturing and product development.</li>
-  </ul>
+  <p>Living in accordance with Kaizen (improvements).</p>
 </blockquote>
+
+<p>I am a thermal and fluid management engineer working in the automotive industry. Born and bred in South Korea, but currently living in Japan.
+My key skills and interests are:</p>
+<ul>
+  <li>Computational Fluid Dynamics (CFD)</li>
+  <li>Turbulent flow</li>
+  <li>Battery thermal management</li>
+  <li>Mechanical design</li>
+  <li>Applying Machine Learning in manufacturing and product development.</li>
+</ul>
 
 <p>Although machine learning is not my expertise <strong>yet</strong>, I have been consistently building up relevant skill-sets, aspiring to bring innovations in the manufacturing industry.</p>
 
-<p>Besides the above mentioned, I enjoy the followings:</p>
+<p>Besides the above, outside of engineering, I enjoy the followings:</p>
 <ul>
   <li>Brazilian Jiu-Jitsu</li>
   <li>Travel</li>
