deploy: 8686005a4af9fe3b1ee04ba76ce95fda226caaca

--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
     <p><img src="/MLforIR4/images/Profile_Photo.png" alt="Profile Photo" title="A lovely day in Jeju island" /></p>
 <h3 id="jaewon-son">Jaewon Son</h3>
 <blockquote>
-  <p>Living in accordance with Kaizen (improvements).</p>
+  <p>Living in accordance with Kaizen (improvements)</p>
 </blockquote>
 
 <p>I am a thermal and fluid management engineer working in the automotive industry. Born and bred in South Korea, but currently living in Japan.
@@ -111,6 +111,8 @@ My key skills and interests are:</p>
   <li>Travel</li>
   <li>Running.</li>
 </ul>
+
+<p>For those who want to know more about me, please <a href="bemba@naver.com">email</a> me.</p>
 
   </div>
 
