deploy: c8c1cecdcc7c917824996ccd7a0e5fa4bcd5e3c4

--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ My key skills and interests are:</p>
   <li>Running.</li>
 </ul>
 
-<p>For those who want to know more about me, please <a href="bemba@naver.com">email</a> me.</p>
+<p>For those who want to know more about me, please <a href="mailto:bemba@naver.com">email</a> me.</p>
 
   </div>
 
