deploy: 87fe263b71eee21f1de00f088e95d9383cab5635

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://json-kr.github.io/MLforIR4/about/" />
 <meta property="og:site_name" content="J.SON - Machine Learning Study Blog" />
 <script type="application/ld+json">
-{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebSite","headline":"About Me","url":"https://json-kr.github.io/MLforIR4/about/","name":"J.SON - Machine Learning Study Blog","@context":"https://schema.org"}</script>
+{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebSite","url":"https://json-kr.github.io/MLforIR4/about/","name":"J.SON - Machine Learning Study Blog","headline":"About Me","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/MLforIR4/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://json-kr.github.io/MLforIR4/feed.xml" title="J.SON - Machine Learning Study Blog" /><link rel="shortcut icon" type="image/x-icon" href="/MLforIR4/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>About Me | J.SON - Machine Learning Study Blog</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="https://json-kr.github.io/MLforIR4/about/" />
 <meta property="og:site_name" content="J.SON - Machine Learning Study Blog" />
 <script type="application/ld+json">
-{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebSite","headline":"About Me","url":"https://json-kr.github.io/MLforIR4/about/","name":"J.SON - Machine Learning Study Blog","@context":"https://schema.org"}</script>
+{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebSite","url":"https://json-kr.github.io/MLforIR4/about/","name":"J.SON - Machine Learning Study Blog","headline":"About Me","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
