--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://json-kr.github.io/MLforIR4/404.html" />
 <meta property="og:site_name" content="J.SON - Machine Learning Study Blog" />
 <script type="application/ld+json">
-{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebPage","headline":"J.SON - Machine Learning Study Blog","url":"https://json-kr.github.io/MLforIR4/404.html","@context":"https://schema.org"}</script>
+{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebPage","url":"https://json-kr.github.io/MLforIR4/404.html","headline":"J.SON - Machine Learning Study Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/MLforIR4/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://json-kr.github.io/MLforIR4/feed.xml" title="J.SON - Machine Learning Study Blog" /><link rel="shortcut icon" type="image/x-icon" href="/MLforIR4/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>J.SON - Machine Learning Study Blog | A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="https://json-kr.github.io/MLforIR4/404.html" />
 <meta property="og:site_name" content="J.SON - Machine Learning Study Blog" />
 <script type="application/ld+json">
-{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebPage","headline":"J.SON - Machine Learning Study Blog","url":"https://json-kr.github.io/MLforIR4/404.html","@context":"https://schema.org"}</script>
+{"description":"A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.","@type":"WebPage","url":"https://json-kr.github.io/MLforIR4/404.html","headline":"J.SON - Machine Learning Study Blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
